3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for CVS:

socket/init.c: Make setsockopt(REUSEADDR) work if using gcc in Ansi C mode on
   Linux.
Andreas Kirschbaum 2005-08-28

common/map.c: Change default values for reset_timeout, enter_x, and enter_y
   map headers to zero. In set_map_reset_time() use MAP_DEFAULTRESET if
   reset_timeout is zero. This change prevents crossedit from adding these
   headers by just loading and saving a map.
include/config.h: Add MAP_DEFAULTRESET.
Andreas Kirschbaum 2005-08-27

server/rune.c: Fix crash if casting disarm out of map bounds.
server/spell_effect.c: Fix crash if casting polymorph out of map bounds.
Andreas Kirschbaum 2005-08-25

Apply patch 1200555 - addition of key/value lists which allows arbitrary
storing of data in objects - see doc/Developers/key-value for more
information
---
loader.l, loader.c: Add add_key_value() function which parses the unknown
  line in the object/archetype.  Update get_ob_diff() to make differences
  for the key/value lists.
common/object.c: Add functions for properly comparing the key/value lists,
  setting and getting the vaues, clearing values upon freeing of object,
  etc.
doc/Developers/Makefile.am: Add key-value file.
doc/Developers/key-value: Documentation of this feature.
include/libproto.h: Rebuilt
include/object.h: Addition of key_value struct, addition of key_values
   field to object.
MSW 2005-08-22

socket/request.c: Fix range checking of toggleextendedtext parameters.
Andreas Kirschbaum 2005-08-17

The following fix code that basically does "for(x = pos-5; x < pos+5; x++)".
This is not correct because it includes "pos-5" but not "pos+5".